--- a/core/templates/core/quienes_somos.html
+++ b/core/templates/core/quienes_somos.html
@@ -88,8 +88,8 @@
   <h2 class="text-center text-white mb-4">Nuestro Equipo</h2>
   <div class="row justify-content-center g-4">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 text-center">
-      <img src="https://scontent.fccp1-1.fna.fbcdn.net/v/t39.30808-6/302163232_5312124265523493_2862085497041268686_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeG-NXJU4T6ZqSuL_wqB6BruW6IjqNlDmOtboiOo2UOY6waHeZvveGkTQ0MVNcebqggTrBRTq7sRglWXuj-LDQSi&_nc_ohc=fp1ouE6iNNgQ7kNvwFRtMpE&_nc_oc=AdlZQsX-W3cPLyFN1BGIse852dAlZMvhcP-M1QfBjpC3HBHl1HA6xrs6UyvPMuea_Kflh0cL6vF-2LaaLB49TlLb&_nc_zt=23&_nc_ht=scontent.fccp1-1.fna&_nc_gid=Pb_tq2fN1x36XN9znen_1Q&oh=00_AfYLdP69oapb4O2O5hsj_Tn-nXz2d1nwH8cDmFoTEoN5jQ&oe=68C97477" 
-           class="rounded-circle mb-3 shadow" width="120" alt="Persona 1">
+      <img src="https://i.imgur.com/cwoiQ7x.jpg" 
+           class="rounded-circle mb-3 shadow" width="120" alt="Jordan Fernandez">
       <h5 class="fw-bold text-white">Jordán Fernández</h5>
       <p>Fundador & Editor</p>
     </div>
